@@ -1,11 +1,6 @@
 package org.schabi.newpipe.extractor.services.youtube.extractors;
 
-import com.grack.nanojson.JsonArray;
-import com.grack.nanojson.JsonObject;
-import com.grack.nanojson.JsonParser;
-import com.grack.nanojson.JsonParserException;
-import com.grack.nanojson.JsonWriter;
-
+import com.grack.nanojson.*;
 import org.schabi.newpipe.extractor.InfoItem;
 import org.schabi.newpipe.extractor.Page;
 import org.schabi.newpipe.extractor.StreamingService;
@@ -22,20 +17,13 @@ import org.schabi.newpipe.extractor.services.youtube.YoutubeParsingHelper;
 import org.schabi.newpipe.extractor.utils.JsonUtils;
 import org.schabi.newpipe.extractor.utils.Utils;
 
+import javax.annotation.Nonnull;
 import java.io.IOException;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import javax.annotation.Nonnull;
-
 import static org.schabi.newpipe.extractor.services.youtube.YoutubeParsingHelper.*;
-import static org.schabi.newpipe.extractor.services.youtube.linkHandler.YoutubeSearchQueryHandlerFactory.MUSIC_ALBUMS;
-import static org.schabi.newpipe.extractor.services.youtube.linkHandler.YoutubeSearchQueryHandlerFactory.MUSIC_ARTISTS;
-import static org.schabi.newpipe.extractor.services.youtube.linkHandler.YoutubeSearchQueryHandlerFactory.MUSIC_PLAYLISTS;
-import static org.schabi.newpipe.extractor.services.youtube.linkHandler.YoutubeSearchQueryHandlerFactory.MUSIC_SONGS;
-import static org.schabi.newpipe.extractor.services.youtube.linkHandler.YoutubeSearchQueryHandlerFactory.MUSIC_VIDEOS;
+import static org.schabi.newpipe.extractor.services.youtube.linkHandler.YoutubeSearchQueryHandlerFactory.*;
 import static org.schabi.newpipe.extractor.utils.JsonUtils.EMPTY_STRING;
 import static org.schabi.newpipe.extractor.utils.Utils.isNullOrEmpty;
 
@@ -105,12 +93,13 @@ public class YoutubeMusicSearchExtractor extends SearchExtractor {
             .end().done().getBytes("UTF-8");
         // @formatter:on
 
-        final Map<String, List<String>> headers = new HashMap<>();
-        headers.put("X-YouTube-Client-Name", Collections.singletonList(youtubeMusicKeys[1]));
-        headers.put("X-YouTube-Client-Version", Collections.singletonList(youtubeMusicKeys[2]));
-        headers.put("Origin", Collections.singletonList("https://music.youtube.com"));
-        headers.put("Referer", Collections.singletonList("music.youtube.com"));
-        headers.put("Content-Type", Collections.singletonList("application/json"));
+        final Map<String, List<String>> headers = Map.of(
+                "X-YouTube-Client-Name", List.of(youtubeMusicKeys[1]),
+                "X-YouTube-Client-Version", List.of(youtubeMusicKeys[2]),
+                "Origin", List.of("https://music.youtube.com"),
+                "Referer", List.of("music.youtube.com"),
+                "Content-Type", List.of("application/json")
+        );
 
         final String responseBody = getValidJsonResponseBody(getDownloader().post(url, headers, json));
 
@@ -223,12 +212,13 @@ public class YoutubeMusicSearchExtractor extends SearchExtractor {
             .end().done().getBytes("UTF-8");
         // @formatter:on
 
-        final Map<String, List<String>> headers = new HashMap<>();
-        headers.put("X-YouTube-Client-Name", Collections.singletonList(youtubeMusicKeys[1]));
-        headers.put("X-YouTube-Client-Version", Collections.singletonList(youtubeMusicKeys[2]));
-        headers.put("Origin", Collections.singletonList("https://music.youtube.com"));
-        headers.put("Referer", Collections.singletonList("music.youtube.com"));
-        headers.put("Content-Type", Collections.singletonList("application/json"));
+        final Map<String, List<String>> headers = Map.of(
+                "X-YouTube-Client-Name", List.of(youtubeMusicKeys[1]),
+                "X-YouTube-Client-Version", List.of(youtubeMusicKeys[2]),
+                "Origin", List.of("https://music.youtube.com"),
+                "Referer", List.of("music.youtube.com"),
+                "Content-Type", List.of("application/json")
+        );
 
         final String responseBody = getValidJsonResponseBody(getDownloader().post(page.getUrl(), headers, json));
 
